Fixed mobile overlap issue; changed normalize cdn link

--- a/style.css
+++ b/style.css
@@ -35,18 +35,22 @@ header {
 
 main {
     margin-top: 250px;
+    height: 200vh;
 }
 
 .section {
-    height: 300px;
+    height: 100vh;
     padding: 10px;
 }
 
 .section-2 {
     background-color: #AAA;
+    height: 100vh;
+    width: 100%;
 }
 
 footer {
     background-color: #777676;
     height: 50px;
     padding-top: 10px;
+    margin-top: -20px;
